# ovh-mailredir-gtk

./: Cargo.toml
src/: main.rs
src/redir_object/: imp.rs  mod.rs
