[package]
name = "ovh-mailredir-gtk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ovh = { path = "../rust-ovh" }
gtk = { version = "0.4.6", package = "gtk4" }
glib = "0.15.8"
gio = "0.15.7"
once_cell = "1.10.0"